# lima

./: README.md  appveyor.yml  testPoller.txt
continuous_integration/: Dockerfile-travis-ubuntu20.04  appveyor_win_after_build.bat  appveyor_win_build.bat  appveyor_win_install.bat
lima_common/conf/: lima-analysis.xml  lima-common-fas.xml  lima-common.xml  log4cpp.properties
lima_common/src/common/: LimaCommon.h
lima_common/src/common/AbstractFactoryPattern/: AmosePluginsManager.cpp  DynamicLibrariesManager.cpp
lima_common/src/common/QsLog/: main.cpp  (+1 more)
lima_linguisticdata/: Languages.cmake
lima_linguisticdata/SpecificEntities/conf/: Miscellaneous-modex.xml  SpecificEntities-modex-tf.xml
lima_linguisticdata/analysisDictionary/fas/: CMakeLists.txt
lima_linguisticdata/cmake/: LinguisticData.cmake
lima_linguisticprocessing/: CMakeLists.txt
lima_linguisticprocessing/conf/: CMakeLists.txt  lima-lp-eng.xml  lima-lp-fas.xml  lima-lp-fre.xml
lima_linguisticprocessing/data/: test-eng.se-EMBEDED.xml  test-fre.se-PERSON.xml
lima_linguisticprocessing/src/linguisticProcessing/: CMakeLists.txt  LinguisticProcessingCommon.h
lima_linguisticprocessing/test/: CMakeLists.txt
lima_linguisticprocessing/test/NLPServer/: CMakeLists.txt  LimaNLPServer.cpp  LimaNLPServer.h  analysisthread.cpp  analysisthread.h  main.cpp
lima_linguisticprocessing/tools/automatonCompiler/: compile-rules.cpp
lima_linguisticprocessing/tools/common/: convertSymbolicCodes.cpp  parseXMLPropertyFile.cpp  testContentDict16.cpp
lima_linguisticprocessing/tools/normalize/: normalizeTerm.cpp
(+50 files in other folders)
